# SchoolersLesson

./: CMakeLists.txt  main.cpp
Schoolers/: HighSchooler.cpp  HighSchooler.h  MiddleSchooler.cpp  MiddleSchooler.h  PrimarySchooler.cpp  PrimarySchooler.h  Schooler.cpp  Schooler.h
